--- a/boolean_ops_polygons.vcxproj.filters
+++ b/boolean_ops_polygons.vcxproj.filters
@@ -61,5 +61,8 @@
     <Text Include="data\Triangulo.txt">
       <Filter>data</Filter>
     </Text>
+    <Text Include="data\triangulinho.txt">
+      <Filter>data</Filter>
+    </Text>
   </ItemGroup>
 </Project>
